# Toasty

./: .editorconfig  .env.example  .gitattributes  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: pages.yml  pre-commit.yml
aibot/: chunk_utils.py  clients.py  constants.py  gemini_api.py  prompt_templates.py  qdrant_api.py  tasks.py  utils.py  views.py
docs/: README.md  _config.yml  index.html  styles.css
toasty/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
