[project]
name = "toasty"
version = "0.1.0"
description = "The smart, context aware AI code reviewer from OWASP BLT."
authors = [
    {name = "Sahil Dhillon",email = "sodhillon_b21@it.vjti.ac.in"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "google-genai (>=1.52.0,<2.0.0)",
    "qdrant-client (>=1.16.0,<2.0.0)",
    "bandit (>=1.9.1,<2.0.0)",
    "unidiff (>=0.7.5,<0.8.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "langchain (>=1.0.8,<2.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "celery[redis] (>=5.5.3,<6.0.0)",
    "rich (>=14.2.0,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py310"]
include = '\.pyi?$'

[tool.djlint]
profile = "django"
indent = 2
blank_line_after_tag = "load,extends"
format_attribute_template_tags = true

[tool.bandit]
exclude_dirs = ["migrations", "venv", ".venv"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
